--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -6,11 +6,23 @@
     {% block extra_head %}{% endblock %}
     {% compress css %}
     {# all styling is kept in the less directory. This see the import file here. #}
-    <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/{{ request.theme }}.less">
+    <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/default.less">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/pygments.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/codrspace.css">
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}mptt_comments/css/mptt_comments.css" />
     <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
+    {% if request.theme == "dark" %}
+    <style type="text/css">
+      html, iframe, frame {-webkit-filter: invert(1) hue-rotate(180deg) !important}
+
+      img,
+      embed[flashvars],
+      *[type*="application/x-shockwave-flash"],
+      *[type*="application/x-silverlight"]
+      {-webkit-filter: invert(1) hue-rotate(180deg) !important}
+    </style>
+    {% endif %}
     {% endcompress %}
     <script type="text/javascript">
       _NOTIFY_URL = "http://classes.txrxlabs.org/tx/rx/ipn/handler/"
@@ -22,7 +34,8 @@
     <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" />
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.pjax.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-modal.js"></script>
+    <script type="text/javascript" src="/admin/jsi18n/"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     {% block head %}{% endblock %}
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
