--- a/txrx/templates/comments/_comment_replies.html
+++ b/txrx/templates/comments/_comment_replies.html
@@ -1,26 +1,12 @@
 {% load mptt_comments_tags %}
 {% load i18n %}
 {% if comment.pk %}
-    <p class="comment_reply_links" id="c-reply-counts-c{{ comment.pk }}">
-        {% if comment|children_count %}
-            {% if comment.level == cutoff_level %}
-                <a class="comment_replies comment_cutoff" data-commentscount="{{ comment|children_count }}" href="{% url comments-subtree comment.pk %}">{% blocktrans with comment|children_count as count %}{{ count }} hidden replies{% endblocktrans %}</a>
-            {% else %}
-                <span class="comment_replies" data-commentscount="{{ comment|children_count }}">{% blocktrans with comment|children_count as count %}{{ count }} replies{% endblocktrans %}</span>
-            {% endif %} |        
-        {% else %}
-            <span class="comment_replies" data-commentscount="0"></span>
-        {% endif %}
-        {% if not comment.is_removed %}
-            <a class="comment_post_new" href="{% url comment-toplevel-reply comment.content_type.pk comment.object_pk %}">
-                {% trans "Post a new comment" %}
-            </a> |
-            <a class="comment_reply" href="{% url comment-reply comment.pk %}">
-                {% trans "Reply to this comment" %}
-            </a> |
-            <a class="comment_flag" href="{% url comments-flag comment.pk %}">
-                {% trans "Flag this comment" %}
-            </a>
-        {% endif %}
-    </p>
+{% if not comment.is_removed %}
+<a class="comment_reply" href="{% url comment-reply comment.pk %}" title="reply">
+  <i class="icon-share-alt"></i>
+  Post Reply</a> |
+<a class="comment_flag" href="{% url comments-flag comment.pk %}" title="flag">
+  <i class="icon-flag"></i>
+  Flag</a>
+{% endif %}
 {% endif %}
