--- a/txrx/templates/comments/_comment_title.html
+++ b/txrx/templates/comments/_comment_title.html
@@ -1,13 +1,15 @@
 {% load i18n %}
+{% if not comment.parent %}
 <p class="comment_title">
-    <a class="comment_expand" href="{% url comment-detail comment_id %}">
-        {% if comment.is_removed %}
-            {% trans "Comment removed" %}
-        {% else %}
-            {% if preview %}
-                (PREVIEW)
-            {% endif %}
-            {{ comment.title }}
-        {% endif %}
-    </a>
+  <a class="comment_expand" href="{% url comment-detail comment_id %}">
+    {% if preview %}
+    (PREVIEW)
+    {% endif %}
+    {% if comment.is_removed %}
+    {% trans "Comment removed" %}
+    {% else %}
+    {{ comment.title }}
+    {% endif %}
+  </a>
 </p>
+{% endif %}
