--- a/txrx/templates/comments/display_comments_toplevel.html
+++ b/txrx/templates/comments/display_comments_toplevel.html
@@ -1,32 +1,31 @@
 {% load i18n %}
 {% load mptt_comments_tags %}
 
-{% get_mptt_comment_list for object as comments %}
-    
-{% if comments %}
-
-<h2>{% trans "Comments" %}</h2>
-
-{% endif %}
-    
-<div id="mptt-comments-tree" class="block-comments-tree">
- 
-{% if comments %}
-
+<div id="comments">
+  {% get_mptt_comment_list for object as comments %}
+  
+  {% if comments %}
+  <h2>{% trans "Comments" %}</h2>
+  {% endif %}
+  
+  <div id="mptt-comments-tree" class="block-comments-tree">
+    {% if comments %}
     {% include "comments/display_comments_tree.html" %}    
-    
-{% endif %}
+    {% endif %}
+  </div>
+  
+  {% include "comments/_comments_remaining.html" %}
 
-</div>
-    
-{% include "comments/_comments_remaining.html" %}
+  {% if request.user.is_authenticated %}
+  <h2 id="post_new_comment">{% trans "Post a new comment" %}</h2>
 
+  <div class="new_comment_form_wrapper">
+    {% get_mptt_comment_form for object as form %}
 
-<h2 id="post_new_comment">{% trans "Post a new comment" %}</h2>
-
-<div class="new_comment_form_wrapper">
-{% get_mptt_comment_form for object as form %}
-
-{% include "comments/form.html" %}
+    {% include "comments/form.html" %}
+    {% else %}
+      Please <a href="/login?next={{ request.path }}">login or register</a> to comment.
+    {% endif %}
+  </div>
 </div> 
 
