making jsi18n an actual file

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -34,7 +34,7 @@
     <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" />
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.pjax.js"></script>
-    <script type="text/javascript" src="/admin/jsi18n/"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jsi18n.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     {% block head %}{% endblock %}
     <!--[if lt IE 9]>
