modal javascript was missing

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-transition.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-dropdown.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-modal.js"></script>
     {% block extra_body %}
     {% endblock %}
     <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-alert.js"></script>
