--- a/txrx/static/less/default.less
+++ b/txrx/static/less/default.less
@@ -10,10 +10,12 @@
 @import "bs/variables.less";
 @import "bs/mixins.less";
 
+@import "bs/accordion.less";
 @import "bs/alerts.less";
 @import "bs/buttons.less";
 @import "bs/carousel.less";
 @import "bs/close.less";
+@import "bs/component-animations.less";
 @import "bs/dropdowns.less";
 @import "bs/forms.less";
 @import "bs/grid.less";
