--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -23,7 +23,7 @@ form label.required {
   font-weight: bold;
 }
 
-#bot_right { position: fixed; bottom: 0px; left: 0px; padding: 3px 6px; border: double 4px; }
+#bot_right { position: fixed; bottom: 0px; left: 0px; padding: 3px 6px; border: double 4px; background: white; }
 
 /* tools */
 #labs {
