--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -14,13 +14,20 @@
     <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
     {% if request.theme == "dark" %}
     <style type="text/css">
-      html, iframe, frame {-webkit-filter: invert(1) hue-rotate(180deg) !important}
+      html, iframe, frame
+      {-webkit-filter: invert(.95) hue-rotate(180deg) !important;filter: invert(100%) hue-rotate(180deg) !important}
 
-      img,
-      embed[flashvars],
-      *[type*="application/x-shockwave-flash"],
-      *[type*="application/x-silverlight"]
-      {-webkit-filter: invert(1) hue-rotate(180deg) !important}
+      img,embed[flashvars],*[type*="application/x-shockwave-flash"],*[type*="application/x-silverlight"],[type=image]
+      {-webkit-filter: invert(.95) hue-rotate(180deg) !important;filter: invert(1) hue-rotate(180deg) !important}
+
+@-moz-document url-prefix(http://), url-prefix(https://), url-prefix(file://) {
+      *{ color: #999999 !important; background: #151515 !important; border-color: #333333 !important; }
+      * { text-shadow: none !important; }
+      a,a *{ color: #6666BB !important; text-decoration: none !important; }
+      a:hover, a:hover *{ color: #55AAAA !important; }
+      a:visited, a:visited *{ color: #884488 !important; }
+      a:visited:hover, a:visited:hover *{ color: #55AAAA !important; }
+}
     </style>
     {% endif %}
     {% endcompress %}
@@ -72,6 +79,7 @@
     </div>
     <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-tooltip.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-collapse.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-transition.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-dropdown.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-modal.js"></script>
