--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -153,7 +153,9 @@ h6{font-size:11px;color:#999999;text-transform:uppercase;}
 
 /* events */
 .paginator {
+  margin-bottom: 10px;
   text-align: center;
+  strong { font-size: 2em; }
   .left { float: left; }
   .right { float: right; }
 }
@@ -162,6 +164,24 @@ h3.date {
   text-decoration: underline;
   margin: 15px 0 0;
 }
+
+#calendar {
+  .day {
+    text-align: right;
+    font-weight: bold;
+    font-size: 1.2em;
+    padding-bottom: 10px;
+  }
+  .events {
+    font-size: 0.85em;
+    line-height: 1.1;
+    min-height: 130px;
+    padding: 5px 5px 0;
+    width: 125px;
+  }
+}
+
+/* comments */
 
 #comments {
   h2 { margin: 20px 0 5px; }
