adding google analytics

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -91,6 +91,20 @@
       $('img[rel=tooltip]').tooltip();
       $(document).pjax('[data-pjax]','#main',{timeout:5000});
     </script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-39204768-1']);
+  _gaq.push(['_setDomainName','txrxlabs.org']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
     <div id="bot_right">
       {% if request.theme == "dark" %}
       <a href="?set_theme=default">Who turned out the Lights?</a>
