--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -231,6 +231,10 @@ h3.date {
   textarea { height: 150px; width: 350px; }
 }
 
+#mptt-comments-tree {
+  min-height: 20px;
+}
+
 #mptt-comments-tree .comment {
   .comment:last-child { margin-bottom: 0; }
   &.collapsed {
