--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -13,7 +13,7 @@
       
       <!-- Be sure to leave the brand out there if you want it shown -->
       <a class="brand" href="{% url "homepage" %}" data-pjax="#main">
-        <img src="{{ STATIC_URL }}img/{{ request.theme }}-logo.png"
+        <img src="{{ STATIC_URL }}img/{{ request.theme }}-logo.png" height="30" width="115"
              alt="Tx/Rx Labs - {{ SITE_TAGLINE }}" title="Tx/Rx Labs - {{ SITE_TAGLINE }}"/></a>
       
       <!-- Everything you want hidden at 940px or less, place within here -->
