minor style change

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -129,7 +129,7 @@ label .help-text {
   width: 85px;
 }
 
-.has_notes {
+.has_notes span {
   border-bottom: dashed 1px;
   color: #0088cc;
   cursor: help;
