--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -55,7 +55,9 @@
               <li><a href="{% url "account_settings" %}" data-pjax="#main"><i class="icon-cog"></i> Settings</a></li>
               {% else %}
               <li><a href="/accounts/register/" data-pjax="#main">Register</a></li>
-              <li><a href="/accounts/login/" data-pjax="#main">Log in with Username</a></li>
+              <li><a href="/accounts/login/?next={{ request.path|urlencode }}">
+                  Log in with Username
+              </a></li>
               <li><a href="{% url "signin_start" %}">Log in with GitHub</a></li>
               {% endif %}
             </ul>
