adding fixing ipn

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -32,7 +32,7 @@
     {% endif %}
     {% endcompress %}
     <script type="text/javascript">
-      _NOTIFY_URL = "http://classes.txrxlabs.org/tx/rx/ipn/handler/"
+      _NOTIFY_URL = "http://txrxlabs.org/tx/rx/ipn/handler/"
     </script>
     
     {% comment %}
