adding link so instructors can edit their class

--- a/course/templates/course/_instructor_panel.html
+++ b/course/templates/course/_instructor_panel.html
@@ -1,5 +1,6 @@
 <h2>Instructor Panel</h2>
 <div class="accordion" id="instructor_panel">
+  <a href="/admin/course/section/{{ session.section.id }}/">Edit Details</a>
   <div class="accordion-group">
     <div class="accordion-heading">
       <a class="accordion-toggle" data-parent="#instructor_panel"
