improving on instructors pages a bit

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -18,8 +18,7 @@
   <div class="instructor">
     Taught by
     <a href="{% url "instructor_detail" session.user.username %}">
-      <i class="icon-user"></i>{{ session.get_instructor_name }}
-    </a>
+      <i class="icon-user"></i>{{ session.get_instructor_name }}</a>
   </div>
   <div class="details">
     <div class="left">
