--- a/txrx/static/less/default.less
+++ b/txrx/static/less/default.less
@@ -34,3 +34,4 @@
 /*for some reason this is not in the theme! */
 body { padding-top: 80px; }
 .wmd-panel {margin: 0; }
+section { padding-bottom: 25px; }
