--- a/course/templates/course/_session_row.html
+++ b/course/templates/course/_session_row.html
@@ -11,7 +11,8 @@
     <a href="{% url "course:detail" session.slug %}">{{ session.section.course }}</a>
     <div class="lower"><small>
         {{ session.get_short_dates }}
-        with {{ session.get_instructor_name|noemail }}
+        with <a href="{% url "instructor_detail" session.user.username %}">
+          <i class="icon-user"></i>{{ session.get_instructor_name|noemail }}</a>
     </small></div>
   </td>
   <td class="note-cell">
