overhaul to comments and now emailing comment submitter on repost

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -2,7 +2,7 @@
 {% load url from future %}
 {% load thumbnail %}
 
-{% block title %}Classes {{ term.name }} at {{ block.super }} {% endblock %}
+{% block title %}Classes {{ term.name }}{% endblock %}
 {% block header %}{% endblock %}
 
 {% block content %}
