--- a/txrx/static/less/default.less
+++ b/txrx/static/less/default.less
@@ -35,3 +35,4 @@
 body { padding-top: 80px; }
 .wmd-panel {margin: 0; }
 section { padding-bottom: 25px; }
+.comment:target > .comment_outer { background-color: @successBackground; }
