--- a/txrx/templates/comments/_comment_replies.html
+++ b/txrx/templates/comments/_comment_replies.html
@@ -2,11 +2,15 @@
 {% load i18n %}
 {% if comment.pk %}
 {% if not comment.is_removed %}
+{% if request.user.is_authenticated %}
 <a class="comment_reply" href="{% url comment-reply comment.pk %}" title="reply">
   <i class="icon-share-alt"></i>
   Post Reply</a> |
 <a class="comment_flag" href="{% url comments-flag comment.pk %}" title="flag">
   <i class="icon-flag"></i>
   Flag</a>
+{% else %}
+<a href="/accounts/login/?next={{ request.path|urlencode }}#c{{ comment.pk }}">Login to reply to this comment</a>
+{% endif %}
 {% endif %}
 {% endif %}
