--- a/txrx/templates/comments/display_comments_tree.html
+++ b/txrx/templates/comments/display_comments_tree.html
@@ -1,7 +1,9 @@
-    {% load mptt_tags %}
+{% load mptt_tags %}
 
-    {% for comment, tree in comments|tree_info %}
-        
-        {% include "comments/display_comment.html" %}
-   
-    {% endfor %}
+{% for comment, tree in comments|tree_info %}
+{% if forloop.first and display_link %}{% with obj=comment.content_object %}
+Comments for: <a href="{{ obj.get_absolute_url }}">{{ obj }}</a>
+{% endwith %}{% endif %}
+{% include "comments/display_comment.html" %}
+
+{% endfor %}
