--- a/txrx/templates/comments/subtree.html
+++ b/txrx/templates/comments/subtree.html
@@ -15,7 +15,7 @@
  
 <div id="mptt-comments-tree" class="block-comments-tree">
         
-{% include "comments/display_comments_tree.html" %}    
+{% include "comments/display_comments_tree.html" with display_link=1 %}
        
 </div>
 
