changing the way we do <title>s

--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -1,7 +1,7 @@
 {% extends parent %}
 {% load url from future %}
 
-{% block pre_title %}Events at TX/RX{% endblock %}
+{% block full_title %}Events at TX/RX{% endblock %}
 {% block header_content %}Events at TX/RX{% endblock %}
 
 {% block main %}
