--- a/membership/templates/membership/settings.html
+++ b/membership/templates/membership/settings.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block full_title %}Settings - {{ SITE_NAME }}{% endblock %}
 {% block header_content %}Edit your account settings{% endblock %}
 
 {% block content %}
