--- a/tool/templates/tool/lab_index.html
+++ b/tool/templates/tool/lab_index.html
@@ -3,7 +3,7 @@
 {% load url from future %}
 
 {% block header_content %}Tools and Equipment at TX/RX Labs{% endblock %}
-{% block pre_title %}Tools and Equipment at TX/RX Labs{% endblock %}
+{% block full_title %}Tools and Equipment at TX/RX Labs{% endblock %}
 
 {% block main %}
 <script type="text/javascript">
