--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -4,7 +4,7 @@
 {% load cache %}
 {% load url from future %}
 
-{% block title %}Home{% endblock %}
+{% block full_title %}Welcome to TX/RX Labs{% endblock %}
 {% block header_content %}TX/RX Labs - Houston's Hackerspace{% endblock %}
 
 {% block content %}
