--- a/txrx/templates/codrspace/posts_by_tag.html
+++ b/txrx/templates/codrspace/posts_by_tag.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block pre_title %}{{ tag.name }} Posts - TX/RX Labs{% endblock %}
+{% block title %}{{ tag.name }} Posts{% endblock %}
 
 {% block header_content %}Posts Tagged {{ tag.name }}{% endblock %}
 {% block extra_head %}
