--- a/txrx/templates/flatpages/markdown.html
+++ b/txrx/templates/flatpages/markdown.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load short_codes %}
-{% block title %}{{ flatpage.title }}{% endblock %}
+{% block full_title %}{{ flatpage.title }}{% endblock %}
 {% block header_content %}{{ flatpage.title }}{% endblock %}
 {% block content %}
 
