--- a/membership/templates/membership/join-us.html
+++ b/membership/templates/membership/join-us.html
@@ -2,7 +2,7 @@
 {% load cache %}
 
 {% block header_content %}Become a Member of TX/RX Labs{% endblock %}
-{% block pre_title %}Become a Member of TX/RX Labs{% endblock %}
+{% block full_title %}Become a Member of TX/RX Labs{% endblock %}
 
 {% block main %}
 {% cache settings.LONG_CACHE memberships %}
