--- a/txrx/templates/flatpages/default.html
+++ b/txrx/templates/flatpages/default.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ flatpage.title }}{% endblock %}
+{% block full_title %}{{ flatpage.title }}{% endblock %}
 {% block header_content %}{{ flatpage.title }}{% endblock %}
 
 {% block content %}
