--- a/txrx/templates/pjax.html
+++ b/txrx/templates/pjax.html
@@ -9,6 +9,6 @@
 <script type="text/javascript">
   var header_html = "{% block header_content %}{{ SITE_TAGLINE }}{% endblock %}";
   if (!!header_html) { $(".home-tagline").html(header_html) }
-  var page_title = "{% block pre_title %}{{ SITE_NAME }} - {% endblock %} {% block title %}{% endblock %}";
+  var page_title = "{% block full_title %}{% block title %}{% endblock %} - {{ SITE_NAME }}{% endblock %}";
   if (!!page_title) { document.title = page_title; }
 </script>
