--- a/txrx/templates/registration/registration_form.html
+++ b/txrx/templates/registration/registration_form.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}Register{% endblock %}
+{% block header_content %}Register{% endblock %}
+
 {% block content %}
 <form method="POST">
   {% csrf_token %}
