--- a/txrx/templates/comments/_comment_meta.html
+++ b/txrx/templates/comments/_comment_meta.html
@@ -1,7 +1,7 @@
-{% load i18n %}
+{% load i18n txrx_tags %}
 <p class="comment_meta">
   <a href="javascript:;" onclick="$(this).closest('.comment').toggleClass('collapsed');" class="expand-link"></a>
-  <span class="commented_by">{{ comment.name }}</span>
+  <span class="commented_by">{{ comment.user.username|noemail }}</span>
   <span class="commented_day">- {{ comment.submit_date|date:"l" }}</span>,
   <span class="commented_date">{{ comment.submit_date|date:"j F" }}</span>
   {% trans "at" %} <span class="commented_time">{{ comment.submit_date|date:"H:i" }}<span> 
