more titles and censoring more emails

--- a/course/templates/course/instructor_detail.html
+++ b/course/templates/course/instructor_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load thumbnail crop_util %}
 
+{% block title %}Bio: {{ profile.name }}{% endblock %}
 {% block header_content %}Bio: {{ profile.name }}{% endblock %}
 
 {% block content %}
