--- a/course/templates/course/instructors.html
+++ b/course/templates/course/instructors.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load thumbnail %}
 {% load url from future %}
+
+{% block title %}Instructors{% endblock %}
+
 {% block content %}
 <section id="instructors">
   <h1>Current Instructors ({{ active_term }})</h1>
