--- a/txrx/templates/registration/login.html
+++ b/txrx/templates/registration/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}Login{% endblock %}
+{% block header_content %}Please Login to Continue{% endblock %}
+
 {% block content %}
 {% include "registration/_login_form.html" %}
 {% endblock %}
