--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -1,7 +1,7 @@
 {% load codrspace_tags %}
 {% load url from future %}
 
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
     <div class="container">
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
