minor styling fix

--- a/codrspace/templates/gallery/index.html
+++ b/codrspace/templates/gallery/index.html
@@ -11,9 +11,11 @@
 <div class="span4 center">
   <div class="well">
     <a href="{{ photoset.get_absolute_url }}">
-      {% thumbnail photoset.first_photo|get_override:"landscape_crop" "260x200" as im %}
-      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
-      {% endthumbnail %}
+      <div style="height: 200px;">
+        {% thumbnail photoset.first_photo|get_override:"landscape_crop" "260x200" as im %}
+        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+        {% endthumbnail %}
+      </div>
       <div>
         {{ photoset }} ({{ photoset.get_photos.count }}&nbsp;photos)
       </div>
