fixing bug in user blog page

--- a/txrx/templates/post_list.html
+++ b/txrx/templates/post_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load short_codes load codrspace_tags txrx_tags %}
+{% load short_codes codrspace_tags txrx_tags %}
 
 {% block title %}Latest {{ post_type }} by {{ username }}{% endblock %}
 
