--- a/txrx/templates/_post_content.html
+++ b/txrx/templates/_post_content.html
@@ -12,7 +12,7 @@
   {% if post.author == user %}
   <span class="label label-{% if post.status == 'published' %}success{% else %}warning{% endif %}">{{ post.status }}</span>
   {% endif %}
-  by <a href="#" rel="popover" data-original-title="{{ post.author.username }}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
+  by <a href="{% url "post_list" post.author.username %}" rel="popover" data-original-title="{{ post.author.username }}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
   {% if post.authr == user %}
   <i class="icon-pencil"></i> <a href="{% url "edit" post.pk %}">edit</a>
   <i class="icon-trash"></i> <a href="{% url "delete" post.pk %}">delete</a>
