--- a/event/templates/event/occurrence_detail.html
+++ b/event/templates/event/occurrence_detail.html
@@ -10,5 +10,6 @@
 {% include "widgets/photo_slideshow.html" with photos=occurrence.photoset.get_photos %}
 {% endif %}
 <p class="lead">{{ occurrence.start }}{% if occurrence.end %} - {{ occurrence.end.time }}{% endif %}</p>
+<p><a href="{{ occurrence.google_link }}">Add to Calendar</a>
 <p>{{ occurrence.description|explosivo }}</p>
 {% endblock %}
